BuildHughes/translation-tool/inputs/source_meta/objects/YAHS_EscalationChecklist__c.object
<CustomObject>
    <fields>
        <fullName>Description_in_Spanish__c</fullName>
        <label>Description in Spanish</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>YAHS_Description_In_Portuguese__c</fullName>
        <label>Description in Portuguese</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>YAHS_Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>YAHS_EffectiveDate__c</fullName>
        <defaultValue>TODAY()</defaultValue>
        <label>Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>YAHS_ExpiryDate__c</fullName>
        <label>Expiry Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>YAHS_RIAPriorityMapping__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>RIA-Priority Mapping</label>
        <referenceTo>YAHS_RIAPriorityMapping__c</referenceTo>
        <relationshipLabel>Escalation Checklist</relationshipLabel>
        <relationshipName>Escalation_Checklist</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Escalation Checklist</label>
    <listViews>
        <fullName>All</fullName>
        <columns>YAHS_Description__c</columns>
        <columns>YAHS_EffectiveDate__c</columns>
        <columns>YAHS_ExpiryDate__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>EC-{0000}</displayFormat>
        <label>Escalation Checklist Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Escalation Checklist</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>AnyOneLanguageIsRequired</fullName>
        <active>true</active>
        <description>At least one of Portuguese or English description is mandatory while saving an escalation checklist</description>
        <errorConditionFormula>AND(ISBLANK( YAHS_Description_In_Portuguese__c ), ISBLANK(YAHS_Description__c) )</errorConditionFormula>
        <errorMessage>Description in any one language is required</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ExpiryDateCannotBeSetUpInPast</fullName>
        <active>true</active>
        <errorConditionFormula>OR(YAHS_ExpiryDate__c &lt; TODAY(),YAHS_ExpiryDate__c&lt;YAHS_EffectiveDate__c)</errorConditionFormula>
        <errorDisplayField>YAHS_ExpiryDate__c</errorDisplayField>
        <errorMessage>Expiry Date cannot be set in past and cannot be less than the effective date</errorMessage>
    </validationRules>
</CustomObject>